snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.jar.md5
65bbd6d668a6581c9ab8b7a3c6af658f